# serde_zipson

./: Cargo.toml  README.md
src/: constants.rs  de.rs  error.rs  lib.rs  ser.rs  value.rs
tests/: tests.rs
tests/de/: array.rs  array_mixed.rs  enumeration.rs  mod.rs  object.rs  scalar.rs  structure.rs
tests/ser/: array.rs  array_mixed.rs  enumeration.rs  mod.rs  object.rs  scalar.rs  structure.rs
