[package]
name = "serde_zipson"
version = "0.1.0"
edition = "2021"
authors = ["Roman Zoris <zoriamba@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "2.0.0", features = [] }
serde = { version = "1.0.188", features = [] }
