[package]
name = "serde_zipson"
version = "0.1.0"
edition = "2021"
authors = ["Roman Zoris <zoriamba@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
indexmap = { version = "2.0.0", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.10.4"
serde = "1.0.188"
