[package]
name = "serde_zipson"
version = "0.1.0"
edition = "2021"
authors = ["Roman Zoris <zoriamba@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
indexmap = { version = "2.6.0", features = ["serde"] }
lazy_static = "1.5.0"
regex = "1.11.0"
serde = { version = "1.0.210", default-features = false }

[dev-dependencies]
serde = { version = "1.0.210", features = ["derive"] }